# MATH-533-F2023

./: 533___Coding_project__documentation.pdf:Zone.Identifier  README.md  pyproject.toml  setup.py
examples/: OLS.py
src/raanova/: __init__.py
src/raanova/ANOVA/: anova.py
src/raanova/linear_regression/: helper_functions.py  lasso.py  linear_regression.py  mila_helpers.py  ols.py  ridge.py  wls.py
test/: test_anova.py  test_lasso.py  test_ols.py  test_ridge.py  test_wls.py
